--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A Vue.js project - MVVM Architectural Pattern",
   "author": "Help My Friends Community",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
